--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,19 @@
 version: '2'
-registry:
-  restart: always
-  image: registry:2
-  ports:
-    - 5000:5000
-  volumes:
-    - /home/docker-registry/data:/var/lib/registry
-  environment:
-    - VIRTUAL_HOST=${VIRTUAL_HOST}
-    - VIRTUAL_PORT=${VIRTUAL_PORT}
-    - LETSENCRYPT_HOST=${LETSENCRYPT_HOST}
-    - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
-  networks:
-    - webproxy
+services:
+  registry:
+    restart: always
+    image: registry:2
+    ports:
+      - 5000:5000
+    volumes:
+      - /home/docker-registry/data:/var/lib/registry
+    environment:
+      - VIRTUAL_HOST=${VIRTUAL_HOST}
+      - VIRTUAL_PORT=${VIRTUAL_PORT}
+      - LETSENCRYPT_HOST=${LETSENCRYPT_HOST}
+      - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
+    networks:
+      - webproxy
 
 networks:
   webproxy:
